# romea-ros2-imu

./: .gitlab-ci.yml  AUTHORS  README.md  romea_imu.repos  romea_imu.rosinstall  romea_imu_public.repos
romea_imu/: CMakeLists.txt  package.xml
romea_imu_bringup/: CMakeLists.txt  README.md  package.xml
romea_imu_bringup/launch/: gladiator_landmark40_ahrs.launch  imu.launch.py  imu_driver.launch.py  xsens_mti.launch
romea_imu_bringup/launch/common/: imu_common.launch  landmark_driver.launch  xsens_driver.launch
romea_imu_bringup/launch/drivers/: bluespace_ai_xsens_mti_driver.launch.py  xsens_driver.launch.py
romea_imu_bringup/python/: imu_bringup.py  romea_imu_bringup.py
romea_imu_bringup/script/: make_xacro.py
romea_imu_bringup/scripts/: urdf_description.py
romea_imu_bringup/test/: test_imu_bringup.py  test_imu_bringup.yaml  test_urdf_description.py
romea_imu_description/: CMakeLists.txt  README.md  package.xml
romea_imu_description/config/: gladiator_landmark40_ahrs_geometry.yaml  gladiator_landmark40_ahrs_specifications.yaml  unitree_b1_geometry.yaml  unitree_b1_specifications.yaml  xsens_mti6xx_geometry.yaml  xsens_mti6xx_specifications.yaml  xsens_mti_geometry.yaml  xsens_mti_specifications.yaml
romea_imu_description/python/: imu_description.py  romea_imu_description.py
romea_imu_description/test/: test_imu_description.py
romea_imu_description/urdf/: gladiator_landmark40_ahrs.xacro.urdf  imu.simulation.xacro  imu.xacro  imu.xacro.urdf  xsens_mti.xacro.urdf  xsens_mti6xx.xacro.urdf
